--- a/.github/workflows/canonicals.yml
+++ b/.github/workflows/canonicals.yml
@@ -18,7 +18,7 @@ permissions:
 
 jobs:
   run-tests:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     name: Run autotests
     steps:
       - name: Download repository
