--- a/.github/workflows/canonicals.yml
+++ b/.github/workflows/canonicals.yml
@@ -44,8 +44,8 @@ jobs:
         with:
           distribution: 'microsoft'
           java-version: '17'
-      - name: install Allure
-        run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz && sudo tar -zxvf allure-2.27.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.27.0/bin/allure /usr/bin/allure
+#      - name: install Allure
+#        run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz && sudo tar -zxvf allure-2.27.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.27.0/bin/allure /usr/bin/allure
       - name: Generate report
         run: allure generate -c allure-results -o _site
       - name: Save report as artifact
