--- a/.github/workflows/canonicals.yml
+++ b/.github/workflows/canonicals.yml
@@ -18,7 +18,7 @@ permissions:
 
 jobs:
   run-tests:
-    runs-on: windows-latest
+    runs-on: ubuntu-20.04
     name: Run autotests
     steps:
       - name: Download repository
@@ -45,10 +45,7 @@ jobs:
           distribution: 'microsoft'
           java-version: '17'
       - name: install Allure
-        run: |
-          Invoke-WebRequest -Uri "https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz" -OutFile "allure-2.27.0.tgz"
-          tar -xzf allure-2.27.0.tgz -C $RUNNER_TOOL_CACHE
-          echo "C:\allure-2.27.0\bin" >> $GITHUB_PATH
+        run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz && sudo tar -zxvf allure-2.27.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.27.0/bin/allure /usr/bin/allure
       - name: Generate report
         run: allure generate -c allure-results -o _site
       - name: Save report as artifact
