Добавила описание для автотестам по канониклам и время запуска

--- a/.github/workflows/canonicals.yml
+++ b/.github/workflows/canonicals.yml
@@ -1,8 +1,8 @@
 name: canonicals
 
 on:
-#  schedule:
-#    - cron: "12 3 * * *"
+  schedule:
+    - cron: "25 3 * * *"
   workflow_dispatch:
 
 env:
