--- a/.github/workflows/canonicals.yml
+++ b/.github/workflows/canonicals.yml
@@ -1,8 +1,8 @@
 name: canonicals
 
 on:
-  schedule:
-    - cron: "15 4 * * *"
+  # schedule:
+    # - cron: "15 4 * * *"
   workflow_dispatch:
 
 env:
